--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: final_project1
+name: Plugin
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -39,8 +39,16 @@ dependencies:
   http: ^1.2.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "Asset/assets/images/icons/Icon App.png"
+  # flutter pub run flutter_launcher_icons:main > run this on terminal
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -79,6 +87,8 @@ flutter:
     - Asset/assets/images/component/Ranifa.png
     - Asset/assets/images/component/Fikal.png
     - Asset/assets/images/icons/Add.png
+    - Asset/assets/images/icons/Icon App.png
+    - Asset/assets/images/icons/Logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
